# appinsights-php-proxy

./: .env.example  Cargo.toml  README.md  debug.json
src/: config.rs  envelope.rs  main.rs  performance.rs  quickpulse.rs
