[package]
name = "syslog-to-app-insights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
appinsights = "0.2.3"
azure_core = "0.17.0"
azure_identity = "0.17.0"
chrono = "0.4.31"
dotenvy = "0.15.7"
reqwest = "0.11.22"
serde = { version = "1.0.190", features = ["std", "derive"] }
serde_json = "1.0.108"
sysinfo = "0.29.10"
syslog_rfc5424 = "0.9.0"
tokio = { version = "1", features = ["full"] }
uuid = "1.5.0"
