[package]
name = "syslog-to-app-insights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
appinsights = "0.2.3"
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["json-lines"] }
axum-macros = "0.3.8"
axum-streams = { version = "0.10.0", features = ["json"] }
chrono = "0.4.31"
dotenvy = "0.15.7"
futures-util = "0.3.29"
reqwest = "0.11.22"
serde = { version = "1.0.190", features = ["std", "derive"] }
serde_json = "1.0.108"
sysinfo = "0.29.10"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13", features = ["log", "tokio"] }
tower-http = { version = "0.4.4", features = ["decompression-gzip", "tower", "tokio"] }
uuid = "1.5.0"
